<resources>
    <string name="scan_text">请扫描芯片上面的二维码</string>

    <string name="app_name">妈咪神器</string>
    <string name="my_activity">我的</string>
    <string name="main_home_tv">首页</string>
    <string name="main_class_room_tv">课堂</string>
    <string name="main_found_tv">发现</string>
    <string name="main_my_tv">我的</string>
    <string name="save_tv">保存</string>
    <string name="feedback_submit_tv">提交</string>
    <string name="app_exit">再按一次退出应用程序</string>
    <string name="about_copyright_eg">©2014-2015 XIAOAI All Rights Reserved</string>
    <string name="activity_login">登录</string>
    <string name="mine_register_tell_tv">手机号</string>
    <string name="mine_register_captchas_tv">获取验证码</string>
    <string name="mine_register_input_captchas_tv">验证码</string>
    <string name="login_tips_tv">*登录即表示你同意</string>
    <string name="confirm">确定</string>
    <string name="cancle">取消</string>
    <string name="send">发送</string>
    <string name="tip">提示</string>
    <string name="yesterday">昨天</string>
    <string name="before_dawn">凌晨</string>
    <string name="morning">早上</string>
    <string name="afternoon">下午</string>
    <string name="night">晚上</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="sunday">周日</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="second">秒</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>


    <string name="picture">[图片]</string>
    <string name="video">[视频]</string>
    <string name="file">[文件]</string>
    <string name="voice_call">[语音通话]</string>
    <string name="voice">声音</string>
    <string name="location_recv">[%1$s的位置]</string>
    <string name="location_message">位置信息</string>
    <string name="location_prefix">[我的位置]</string>
    <string name="send_voice_need_sdcard_support">发送语音需要sdcard支持</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="Is_download_voice_click_later">正在下载语音，稍后点击</string>
    <string name="Recording_without_permission">无录音权限</string>
    <string name="The_recording_time_is_too_short">录音时间太短</string>
    <string name="send_failure_please">发送失败，请检测服务器是否连接</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>

    <string name="guide_click_next">下一步</string>
    <string name="guide_is_know">您知道自己的预产期吗？</string>
    <string name="guide_know">知道</string>
    <string name="guide_no_know">不知道</string>
    <!-- age -->
    <string name="guide_age_title">Age</string>
    <string name="guide_age_currently">目前</string>
    <string name="guide_age_year">岁</string>

    <!-- Height -->
    <string name="guide_height_title">Height</string>
    <string name="guide_height">身高</string>
    <string name="guide_height_meters">米</string>
    <string name="guide_height_cm">厘米</string>

    <!-- Weight -->
    <string name="guide_weight_title">Weight</string>
    <string name="guide_weight">体重</string>
    <string name="guide_weight_kg">千克</string>

    <!-- Period -->
    <string name="guide_due_title">Period</string>
    <string name="guide_due">预产期</string>
    <string name="guide_due_month">月</string>
    <string name="guide_due_days">日</string>

    <!-- EndDue -->
    <string name="guide_end_due_title">Period</string>
    <string name="guide_end_due">末次经期</string>
    <string name="guide_end_due_month">月</string>
    <string name="guide_end_due_days">日</string>

    <!-- Days -->
    <string name="guide_days_title">Days</string>
    <string name="guide_days_week">月经周期</string>
    <string name="guide_days">天</string>

    <!-- Symptom -->
    <string name="guide_symptom_title">Symptom</string>
    <string name="guide_symptom_external">外部</string>
    <string name="guide_symptom_external_tumor">脚肿</string>
    <string name="guide_symptom_external_backache">腰酸</string>
    <string name="guide_symptom_external_breast">乳房胀痛</string>
    <string name="guide_symptom_internal">内部</string>
    <string name="guide_symptom_internal_temperature">体温升高</string>
    <string name="guide_symptom_internal_menolipsis">停经</string>
    <string name="guide_symptom_internal_unusually">白带异常</string>
    <string name="guide_symptom_custom">自定义</string>
    <string name="guide_symptom_submit">提交</string>
    <string name="guide_symptom_input">请输入</string>
    <string name="guide_symptom_complete">完成</string>


    <string name="p2refresh_head_load_more">加载更多</string>
    <string name="p2refresh_end_load_more">更    多</string>
    <string name="p2refresh_end_click_load_more">点击加载</string>
    <string name="p2refresh_release_refresh">松开立即刷新</string>
    <string name="p2refresh_pull_to_refresh">下拉刷新</string>
    <string name="p2refresh_doing_head_refresh">正在刷新</string>
    <string name="p2refresh_doing_end_refresh">加载中</string>
    <string name="p2refresh_refresh_lasttime">最近更新</string>

</resources>
